t+tr:[[kesik]] ([[WT:EDIT|Assisted]]) <cut#22256186>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -55,6 +55,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * Russian: {{t+|ru|ре́заный|sc=Cyrl|tr=rézanyj}}, {{t-|ru|наре́заный|sc=Cyrl|tr=narézanyj}}, {{t-|ru|поре́заный|sc=Cyrl|tr=porézanyj}}, {{t-|ru|разре́заный|sc=Cyrl|tr=razrézanyj}}
 * Spanish: {{t+|es|cortado}}
 * Swedish: {{t+|sv|klippt}}, {{t+|sv|skuren}}
+* Turkish: {{t|tr|kesik}}
 * Vietnamese: {{t+|vi|cắt}}
 {{trans-bottom}}
 
