--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -178,7 +178,7 @@ From {{etyl|ang|en}} {{term|þunor|lang=ang}}, from {{etyl|gem-pro|en}} {{term/t
 * {{ttbc|br}}: {{t+|br|kurun|f}}, {{t+|br|taran|m}}
 * {{ttbc|eo}}: {{t-|eo|tondro}}
 * {{ttbc|gn}}: {{t-|gn|sunu}}
-* {{ttbc|id}}: {{t+|id|gelegar}}, {{t-SOP|id|[[suara]] [[petir]]}} <!-- was "[[suara]] [[petir]]" - assumed sum-of-parts; if an idiom, use {{t}} instead of {{t-SOP}}. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->, {{t-|id|suara halilintar}}
+* {{ttbc|id}}: {{t+|id|gelegar}}, {{t|id|[[suara]] [[petir]]}} <!-- was "[[suara]] [[petir]]" - assumed sum-of-parts; remove [[links]] to [[words]] if idiomatic, see [[User:Kephir/gadgets/xte#Translation_fixing]] -->, {{t-|id|suara halilintar}}
 * {{ttbc|ia}}: {{t-|ia|tonitro}}
 {{trans-mid}}
 * {{ttbc|rw}}: {{t-|rw|inkuba}}
@@ -217,7 +217,7 @@ From {{etyl|ang|en}} {{term|þunor|lang=ang}}, from {{etyl|gem-pro|en}} {{term/t
 
 ====Translations====
 {{trans-top|to make a noise like thunder}}
-* {{ttbc|br}}: {{t-SOP|br|[[ober]] [[kurun]]}} <!-- was "[[ober]] [[kurun]]" - assumed sum-of-parts; if an idiom, use {{t}} instead of {{t-SOP}}. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->, {{t-|br|taranal}}, {{t-|br|taraniñ}}
+* {{ttbc|br}}: {{t|br|[[ober]] [[kurun]]}} <!-- was "[[ober]] [[kurun]]" - assumed sum-of-parts; if an idiom, drop [[links]] to [[words]]. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->, {{t-|br|taranal}}, {{t-|br|taraniñ}}
 * Catalan: {{t+|ca|tronar}}
 * Chinese:
 *: Mandarin: {{t|cmn|打雷|tr=dǎléi|sc=Hani}}
