* Ngazidja Comorian: {{tø|zdj|tsapvuha|alt=utsapvuha}} <play#22284799>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -96,6 +96,7 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 * Malay: {{t-|ms|bermain}}
 * Navajo: {{tø|nv|naashné}}
 * Neapolitan: {{tø|nap|pazzià}}
+* Ngazidja Comorian: {{tø|zdj|tsapvuha|alt=utsapvuha}}
 * Norwegian: {{t+|no|leke}}
 * Old English: {{t-|ang|lācan}}
 * Pashto: {{t-|ps|لوبې كول|tr=lobe kawəl|sc=ps-Arab}}, {{t-|ps|لوبول|tr=lobawəl|sc=ps-Arab}}
