--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -20,28 +20,28 @@ Cognate with {{etyl|sco|-}} {{term|cum||to come|lang=sco}}, {{etyl|stq|-}} {{ter
 {{en-verb|comes|coming|came|come}}
 
 # {{context|intransitive|lang=en}} To [[move]] from further [[away]] to [[near]]er to.
-#: ''She’ll be '''coming''' ’round the mountain when she '''comes'''...''
-# {{context|intransitive|lang=en}} To [[arrive]]
-#: ''The guests '''came''' at eight o'clock.''
+#: {{usex|lang=en|She’ll be '''coming''' ’round the mountain when she '''comes'''{{...}}}}
+# {{context|intransitive|lang=en}} To [[arrive]].
+#: {{usex|lang=en|The guests '''came''' at eight o'clock.}}
 # {{context|intransitive|lang=en}} To [[appear]], to [[manifest]] itself.
-#: ''The pain in his leg '''comes''' and goes.''
+#: {{usex|lang=en|The pain in his leg '''comes''' and goes.}}
 # {{context|intransitive|lang=en}} To take a position to something else in a [[sequence]].
-#: ''Which letter '''comes''' before Y?''
-#: ''Winter '''comes''' after autumn.''
+#: {{usex|lang=en|Which letter '''comes''' before Y?&nbsp;&nbsp; Winter '''comes''' after autumn.}}
 # {{context|intransitive|slang|lang=en}} To achieve [[orgasm]]; to [[cum]].
-#: ''He '''came''' after a few minutes.''
+#: {{usex|lang=en|He '''came''' after a few minutes.}
 # {{context|copulative|figuratively|with ''close''|lang=en}} To [[approach]] a state of being or accomplishment.
-#: ''They '''came''' very close to leaving on time.''
-#: ''His test scores '''came''' close to perfect.''
+#*{{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
+|title={{w|The Celebrity}}|chapter=3
+|passage=Now all this was very fine, but not at all in keeping with the Celebrity's character as I had '''come''' to conceive it. The idea that adulation ever cloyed on him was ludicrous in itself. In fact I thought the whole story fishy, and came very near to saying so.}}
+#: {{usex|lang=en|They '''came''' very close to leaving on time.&nbsp;&nbsp; His test scores '''came''' close to perfect.}}
 # {{context|figuratively|with ''to''|lang=en}} To take a particular [[approach]] or [[point of view]] in regard to something.
-#: ''He '''came''' to SF literature a confirmed technophile, and nothing made him happier than to read a manuscript thick with imaginary gizmos and whatzits.''
+#: {{usex|lang=en|He '''came''' to SF literature a confirmed technophile, and nothing made him happier than to read a manuscript thick with imaginary gizmos and whatzits.}}
 # {{context|copulative|archaic|lang=en}} To [[become]], to [[turn out]] to be.
-#: ''He was a dream '''come''' true.''
+#: {{usex|lang=en|He was a dream '''come''' true.}}
 # {{context|intransitive|lang=en}} To be supplied, or made available; to exist.
-#: ''He's as tough as they '''come'''.''
-#: ''Our milkshakes '''come''' in vanilla, strawberry and chocolate flavours.''
+#: {{usex|lang=en|He's as tough as they '''come'''.&nbsp;&nbsp; Our milkshakes '''come''' in vanilla, strawberry and chocolate flavours.}}
 # {{context|slang|lang=en}} To carry through; to succeed in.
-#: ''You can't '''come''' any tricks here.''
+#: {{usex|lang=en|You can't '''come''' any tricks here.}}
 
 ====Usage notes====
 A few old texts use ''[[comen]]'' as the past participle.
