--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -155,6 +155,7 @@ Supposed by some to derive from {{etyl|gd|en}} {{term|stob||to prick, to prod, t
 
 {{trans-top|To cause a sharp painful sensation}}
 * Dutch: {{t+|nl|steken}}
+* Finnish: {{t+|fi|pistää}}
 * Hungarian: {{t-|hu|nyilallik}}
 {{trans-mid}}
 * Norwegian: {{t+|no|stikke}}
