Fixing translation table to use {{t}} ([[User:Kephir/gadgets/xte|assisted]]) — please review: ca, cmn, fr, hu <e.g.#22341530>

--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -34,54 +34,55 @@ Abbreviation of {{etyl|la|en}} {{term/t|la|exemplī grātiā||for example}}. ''G
 
 ====Translations====
 {{trans-top|abbreviation for “for example”}}
-* Albanian: [[p. sh.]] {{qualifier|[[për shembull]]}}
-* Arabic: [[على سبيل المثال]]
+* Albanian: {{qualifier|[[për shembull]]}} {{t|sq|p. sh.}}
+* Arabic: {{t|ar|على سبيل المثال|sc=Arab}}
 * Armenian: {{t-|hy|օր.|tr=òr.}} {{qualifier|[[օրինակ]]}}
 * Basque: {{t+|eu|adib.}} {{qualifier|[[adibidez]]}}
-* Bulgarian: [[напр.]] {{qualifier|[[например]]}}
-* Catalan: [[p. ex.]] [[per exemple]]
-* Chinese: [[例如]] (li4 ru2)
+* Bulgarian: {{qualifier|[[например]]}} {{t|bg|напр.|sc=Cyrl}}
+* {{ttbc|ca}}: {{t|ca|p. ex.}}, {{t|ca|per exemple}} <!-- was "[[p. ex.]] [[per exemple]]" -->
+* Chinese:
+*: {{ttbc|cmn}}: {{t|cmn|例如|tr=li4 ru2|sc=Hani}}
 * Czech: {{t+|cs|např.}}
 * Danish: {{t+|da|f.eks.}}, {{t+|da|fx}} {{qualifier|{{t-|da|for eksempel}}}}
 * Dutch: {{t+|nl|bv.}}, {{t+|nl|bijv.}} {{qualifier|{{t+|nl|bijvoorbeeld}}}}
-* Esperanto: [[ekz.]] {{qualifier|[[ekzemple]]}}
+* Esperanto: {{qualifier|[[ekzemple]]}} {{t|eo|ekz.}}
 * Estonian: {{t+|et|nt}}
 * Faroese: {{t-|fo|t.d.}} {{qualifier|{{t-|fo|til dømis}}}}
-* Finnish: [[esim.]] {{qualifier|[[esimerkiksi]]}}
-* French: [[par ex.]], [[p. ex.]] {{qualifier|[[par exemple]]}}<!-- are both right? -->
+* Finnish: {{qualifier|[[esimerkiksi]]}} {{t|fi|esim.}}
+* {{ttbc|fr}}: {{t|fr|par ex.}}, {{qualifier|[[par exemple]]}} {{t|fr|p. ex.}} <!-- are both right? -->
 * Georgian: {{t+|ka|მაგ.|tr=mag.|sc=Geor}}
-* German: [[z. B.]] {{qualifier|[[zum Beispiel]]}}
+* German: {{qualifier|[[zum Beispiel]]}} {{t|de|z. B.}}
 * Greek: {{t+|el|π.χ.|tr=p.ch.|sc=Grek}}, {{t-|el|παραδείγματος χάριν|tr=paradeígmatos chárin|sc=Grek}}
 * Hebrew: {{t-|he|לדוגמה|tr=l'dugmá}}, {{t-|he|למשל|tr=l'mashál}}
-* Hungarian: [[pl.]] {{qualifier|written out}} [[például]]
+* {{ttbc|hu}}: {{qualifier|written out}} {{t|hu|[[pl.]][[például]]}} <!-- was "[[pl.]][[például]]" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
 * Icelandic: {{t+|is|t.d.}} {{qualifier|{{t+|is|til dæmis}}}}
-* Italian: [[ad es.]] {{qualifier|[[ad esempio]]}}
-* Japanese: [[例]] (rei)
-* Korean: [[예]] (ye)
+* Italian: {{qualifier|[[ad esempio]]}} {{t|it|ad es.}}
+* Japanese: {{t|ja|例|tr=rei|sc=Jpan}}
+* Korean: {{t|ko|예|tr=ye|sc=Kore}}
 {{trans-mid}}
-* Latvian: [[piem.]] {{qualifier|[[piemēram]]}}
-* Lithuanian: [[pvz.]] {{qualifier|[[pavyzdžiui]]}}
+* Latvian: {{qualifier|[[piemēram]]}} {{t|lv|piem.}}
+* Lithuanian: {{qualifier|[[pavyzdžiui]]}} {{t|lt|pvz.}}
 * Lojban: {{t+|jbo|mu'u}}, {{t+|jbo|mu'a}}
 * Luxembourgish: {{t-|lb|z. B.}}
 * Malay: {{t-|ms|mis.}} {{qualifier|[[misalnya]]}}
 * Norwegian: {{t+|no|f.eks.}} {{qualifier|{{t-|no|for eksempel}}}}, {{t+|no|t.d.}} {{qualifier|{{t-|no|til dømes}}}}
-* Persian: [[براي مثال]]
-* Polish: [[np.]] {{qualifier|[[na]] [[przykład]]}}
-* Portuguese: [[p. ex.]], [[ex.]] {{qualifier|[[por exemplo]]}}
-* Romanian: {{t-|ro|de exemplu}},  {{t-|ro|de ex.}},  {{t-|ro|e.g.}}
-* Russian: [[напр.]] {{qualifier|[[например]]}}
+* Persian: {{t|fa|براي مثال|sc=Arab}}
+* Polish: {{qualifier|[[na]] [[przykład]]}} {{t|pl|np.}}
+* Portuguese: {{t|pt|p. ex.}}, {{qualifier|[[por exemplo]]}} {{t|pt|ex.}}
+* Romanian: {{t-|ro|de exemplu}}, {{t-|ro|de ex.}}, {{t-|ro|e.g.}}
+* Russian: {{qualifier|[[например]]}} {{t|ru|напр.|sc=Cyrl}}
 * Scottish Gaelic: {{t-|gd|me}}
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|нпр.}} {{qualifier|[[на]] [[пример]]}}
 *: Roman: {{t-|sh|npr.}} {{qualifier|[[na]] [[primer]]}}
-* Slovak: [[napr.]] {{qualifier|[[napríklad]]}}
-* Slovene: [[npr.]] {{qualifier|[[na]] [[primer]]}}
+* Slovak: {{qualifier|[[napríklad]]}} {{t|sk|napr.}}
+* Slovene: {{qualifier|[[na]] [[primer]]}} {{t|sl|npr.}}
 * Spanish: {{t+|es|por ejemplo}}
 * Swedish: {{t+|sv|t.ex.}}, {{t+|sv|t ex}}, {{t-|sv|tex.}} {{t-|sv|t. ex.}} {{qualifier|{{t+|sv|till exempel}}}}, {{t+|sv|exempelvis}}
 * Tagalog: {{t+|tl|halimbawa}}
-* Turkish: {{t+|tr|örneğin}},  {{t+|tr|mesela}}, {{t-|tr|örn.}}
+* Turkish: {{t+|tr|örneğin}}, {{t+|tr|mesela}}, {{t-|tr|örn.}}
 * Ukrainian: {{t-|uk|наприклад|tr=napryklad}}
-* Vietnamese: [[vd.]] {{qualifier|[[ví dụ]]}}
+* Vietnamese: {{qualifier|[[ví dụ]]}} {{t|vi|vd.}}
 {{trans-bottom}}
 
 ====References====
