--- a/en/倪/倪.11045.wikitext
+++ b/en/倪/倪.11045.wikitext
@@ -3,7 +3,7 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=2721<sub>7</sub>|canj=人竹X山 (OHXU)|ids=⿰[[亻]][[兒]]}}
 
-# a [[Chinese]] [[surname]]
+* a [[Chinese]] [[surname]]
 
 ====References====
 * {{Han ref|kx=0109.020|dkj=00792|dj=0231.110|hdz=10179.090|uh=502A|ud=20522|bh=ADD9|bd=44505}}
