--- a/en/偎/偎.11102.wikitext
+++ b/en/偎/偎.11102.wikitext
@@ -3,7 +3,9 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2623<sub>2</sub>|canj=人田一女 (OWMV)|ids=⿰[[亻]][[畏]]}}
 
-# [[cling]] to, [[cuddle]], [[embrace]], [[fondle]]
+# be close to
+# [[comfort]]
+# [[sit down]]
 
 ====References====
 * {{Han ref|kx=0110.110|dkj=00843|dj=0235.050|hdz=10191.020|uh=504E|ud=20558|bh=B0B9|bd=45241}}
