--- a/en/偎/偎.11102.wikitext
+++ b/en/偎/偎.11102.wikitext
@@ -3,7 +3,7 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2623<sub>2</sub>|canj=人田一女 (OWMV)|ids=⿰[[亻]][[畏]]}}
 
-# be close to
+# be close to, draw near
 # [[comfort]]
 # [[sit down]]
 
