--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{etyl|sh|en}} [[Jugoslavija]], in turn from [[jug]]o (''south'') and '''slavija''' (''slavia'', the land of the [[Slav]]s).  Literally, ''the land of the southern Slavs''.
+{{borrowing|sh|Jugoslavija|lang=en}}, in turn from {{term|jug|jugo|south|lang=sh}} and {{term|slavija||''slavia'', the land of the [[Slav]]s|lang=sh}}.  Literally, ''the land of the southern Slavs''.
 
 ===Alternative forms===
 * [[Jugoslavia]] (''common pre-WWII spelling'')
