/* Translations */ * Ngazidja Comorian: {{tø|zdj|zingara|alt=uzingara}} <catch#22664891>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -330,13 +330,14 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 * {{trreq|ka}}
 * Italian: {{t+|it|agguantare}}
 * Marathi: {{t-|mr|पकडणे|tr=pakaḍaṇe|sc=Deva}}
+* Ngazidja Comorian: {{tø|zdj|zingara|alt=uzingara}}
 * Polish: [[łapać]] / [[złapać]]
 * Russian: {{t+|ru|ловить|tr=lovít'}} {{impf}}, {{t+|ru|поймать|tr=pojmát'}} {{pf.}}
+{{trans-mid}}
 * Sardinian:
 *: Campidanese Sardinian: {{tø|sro|aggaffài}}
 *: Gallurese Sardinian: {{tø|sdn|aggantà}}
 *: Logudorese Sardinian: {{tø|src|aggarrare}}
-{{trans-mid}}
 * Sassarese Sardinian: {{tø|sdc|agguantà}}
 * Scottish Gaelic: {{t-|gd|glac}}
 {{trans-bottom}}
