/* Translations */ * Ngazidja Comorian: {{tø|zdj|ndravu|c9|c10}} <branch#22711544>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -88,6 +88,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Macedonian: {{t-|mk|гранка|n|tr=gránka}}
 * Malay: {{t-|ms|dahan}}
 * Navajo: {{tø|nv|tsin bigaan}}
+* Ngazidja Comorian: {{tø|zdj|ndravu|c9|c10}}
 * Norwegian: {{t+|no|gren|m}}, {{t+|no|grein|m}}
 * Occitan: {{t-|oc|ram|m}}, {{t-|oc|ramèl|m}}
 * Persian: {{t+|fa|شاخه|tr=šâxe|sc=fa-Arab}}
