added [[Category:1000 English basic words]] using [[Help:Gadget-HotCat|HotCat]] <cut#22945949>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -706,6 +706,7 @@ From {{etyl|poz-swa-pro|kyi}} {{term/t|poz-swa-pro|*likud}}, from {{etyl|poz-pro
 # [[back]] {{qualifier|the rear of body}}
 
 [[Category:kyi:Anatomy]]
+[[Category:1000 English basic words]]
 
 ----
 
