/* Translations */ removed expansions <i.e.#22969749>

--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -27,21 +27,21 @@ i.e. differs from [[viz.]] in that what follows merely restates what was said in
 {{trans-top|that is}}
 * Arabic: {{t-|ar|يعني|tr=yáʕni}}
 * Armenian: {{t-|hy|այսինքն|tr=aysink’n}}
-* Bulgarian: {{t|bg|т.е.|tr=[[тоест]], ''toest''|sc=Cyrl}}
-* Czech: {{t+|cs|tj.}} ([[to]] [[je]])
-* Danish: {{t+|da|dvs.}} {{qualifier|{{t-|da|det vil sige}}}}
-* Dutch: {{t+|nl|d.w.z.}} {{qualifier|[[dat]] [[wil]] [[zeggen]]}}
+* Bulgarian: {{t|bg|т.е.|tr=toest|sc=Cyrl}}
+* Czech: {{t+|cs|tj.}}
+* Danish: {{t+|da|dvs.}}
+* Dutch: {{t+|nl|d.w.z.}}
 * Esperanto: {{t-|eo|t.e.}}
-* Finnish: {{qualifier|[[eli]]}} {{t|fi|l.}}, {{qualifier|[[toisin sanoen]]}} {{t|fi|ts.}}
+* Finnish: {{t|fi|l.}}<!-- [[eli]] -->, {{t|fi|ts.}}
 * French: {{t+|fr|c.-à-d.}}
-* German: {{qualifier|[[das heißt]]}} {{t|de|d. h.}}
+* German: {{t|de|d. h.}}
 * Greek: {{t+|el|δηλαδή|tr=diladí|sc=Grek}}
 * Hebrew: {{t-|he|דהיינו|tr=deháinu}}, {{t-|he|כלומר|tr=klomár}}, {{t-|he|זאת אומרת|tr=zót oméret}}
 * Hungarian: {{t+|hu|azaz}}
-* Icelandic: {{t+|is|þ.e.}} {{qualifier|{{t+|is|það}} {{t+|is|er}}}}, {{t+|is|þ.e.a.s.}} {{qualifier|{{t+|is|það}} {{t+|is|er}} {{t+|is|að}} {{t+|is|segja}}}}
-* Irish: {{t-|ga|.i.}} {{qualifier|{{t-|ga|eadhon}}}}
-{{trans-mid}}
+* Icelandic: {{t+|is|þ.e.}} <!-- [[það]] [[er]] -->, {{t+|is|þ.e.a.s.}} <!-- [[það]] [[er]] [[að]] [[segja]] -->
+* Irish: {{t-|ga|.i.}}<!-- {{qualifier|{{t-|ga|eadhon}}}} -->
 * Italian: {{t+|it|cioè}}
+{{trans-mid}}
 * Japanese: {{t-|ja|すなわち|tr=sunawachi|sc=Jpan}}
 * Lojban: {{t-|jbo|va'i}}
 * Malay: {{t-|ms|iaitu}}, {{t-|ms|yakni}}
@@ -50,14 +50,14 @@ i.e. differs from [[viz.]] in that what follows merely restates what was said in
 *: Bokmål: {{t+|nb|dvs.}}
 *: Nynorsk: {{t-|nn|d.e.}}, {{t-|nn|dvs.}}
 * Persian: {{t+|fa|یعنی|tr=ya'ni|sc=fa-Arab}}
-* Polish: {{qualifier|[[to]] [[znaczy]]}} {{t|pl|tzn.}}, {{qualifier|[[to]] [[jest]]}} {{t|pl|tj.}}
+* Polish: {{t|pl|tzn.}}, {{t|pl|tj.}}
 * Portuguese: {{t|pt|isto é}}, {{t+|pt|ou seja}}
-* Russian: {{t|ru|т. е.|tr=[[то есть]], ''tó jest’''|sc=Cyrl}}
+* Russian: {{t|ru|т. е.|tr=tó jest’|sc=Cyrl}}
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|тј.|sc=Cyrl}} ({{l|sh|то}} {{l|sh|јест}})
 *: Roman: {{t-|sh|tj.}} ({{l|sh|tȏ}} {{l|sh|jȅst}})
 * Spanish: {{t+|es|es decir}}, {{t-|es|a saber}}
-* Swedish: {{t+|sv|dvs}}, {{t+|sv|d v s}}, {{t+|sv|d.v.s.}} {{qualifier|{{t+|sv|det}} {{t+|sv|vill}} {{t+|sv|säga}}}}
+* Swedish: {{t+|sv|dvs}}, {{t+|sv|d v s}}, {{t+|sv|d.v.s.}}
 * Turkish: {{t+|tr|yani}}
 {{trans-bottom}}
 
