## {{context|intransitive|lang=en}} To spread by [[infection]] or similar means.  ##* Addison  ##*: Does the sedition '''catch''' from man to man?  ##* Mary Martha Sherwood  ##*: He accosted Mrs. Browne very civilly, told her his wife was very ill, and sa <catch#23019983>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -265,6 +265,11 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 ##: ''Her hair was '''caught''' by the light breeze.''
 ## {{context|transitive|lang=en}} To be [[infect]]ed by (an illness). {{defdate|from 16th c.}}
 ##: ''Everyone seems to be '''catching''' the flu this week.''
+## {{context|intransitive|lang=en}} To spread by [[infection]] or similar means.
+##* Addison
+##*: Does the sedition '''catch''' from man to man?
+##* Mary Martha Sherwood
+##*: He accosted Mrs. Browne very civilly, told her his wife was very ill, and said he was sadly troubled to get a white woman to nurse her: "For," said he, "Mrs. Simpson has set it abroad that her fever is '''catching'''."
 ## {{context|transitive|intransitive|lang=en}} To [[receive]] or be affected by (wind, water, fire etc.). {{defdate|from 18th c.}}
 ##: ''The bucket '''catches''' water from the downspout.''
 ##: ''The trees '''caught''' quickly in the dry wind.''
