#: ''The train '''thundered''' along the tracks.''  # To produce thunder; to sound, rattle, or roar, as a discharge of atmospheric electricity; often used impersonally.  #: ''It '''thundered''' continuously.'' <thunder#23043979>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -197,7 +197,10 @@ From {{etyl|ang|en}} {{term|þunor|lang=ang}}, from {{etyl|gem-pro|en}} {{term/t
 ===Verb===
 {{en-verb}}
 
+# To produce thunder; to sound, rattle, or roar, as a discharge of atmospheric electricity; often used impersonally.
+#: ''It '''thundered''' continuously.''
 # {{context|intransitive|lang=en}} To make a [[noise]] like thunder.
+#: ''The train '''thundered''' along the tracks.''
 # {{context|intransitive|lang=en}} To talk with a [[loud]], [[threatening]] voice.
 #: ''"Get back to work at once!", he '''thundered'''.''
 # {{context|transitive|lang=en}} To say (something) with a loud, threatening voice.
