--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -131,6 +131,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 * Dutch: {{t+|nl|haak|m}}
 {{trans-mid}}
 * Finnish: {{t+|fi|haka}}, {{t-|fi|salpa}}, {{t+|fi|solki}}
+* Italian: {{t|it|fermaglio}}
 * Swedish: {{t-|sv|hasp|c}}, {{t+|sv|hake|c}}
 {{trans-bottom}}
 
