--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -167,6 +167,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 * Finnish: {{t+|fi|huomio}}
 {{trans-mid}}
 * Italian: {{t+|it|colpo|m}}
+{{trans-bottom}}
 
 {{trans-top|the game of catching a ball {{jump|t|ball game}} }}
 * Finnish: {{t-|fi|kopittelu}}
