--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -130,7 +130,7 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 * Armenian: {{t-|hy|նվագել|tr=nvagel}}
 * Catalan: [[tocar]]
 * Chinese:
-*: Mandarin: {{t|cmn|演奏|tr=yǎnzòu|sc=Hani}}, {{qualifier|string instruments including piano}} {{t|cmn|彈|sc=Hani}}, {{t|cmn|弹|tr=tán|sc=Hani}}, {{qualifier|wind instruments}} {{t|cmn|吹|tr=chuī|sc=Hani}}, {{qualifier|percussion instruments}} {{t|cmn|敲打|tr=qiāodǎ|sc=Hani}}
+*: Mandarin: {{t|cmn|演奏|tr=yǎnzòu|sc=Hani}}, {{qualifier|string instruments including piano}} {{t|cmn|彈|sc=Hani}}, {{t|cmn|弹|tr=tán|sc=Hani}}, {{qualifier|wind instruments}} {{t|cmn|吹|tr=chuī|sc=Hani}}, {{qualifier|percussion instruments}} {{t|cmn|敲打|tr=qiāodǎ|sc=Hani}}, {{t|cmn|拉|tr=lā|sc=Hani}}
 * Czech: {{t+|cs|hrát}}
 * Dutch: {{t+|nl|spelen}}, {{t+|nl|bespelen}}
 * Finnish: {{t+|fi|soittaa}}
