--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -130,7 +130,7 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 * Armenian: {{t-|hy|նվագել|tr=nvagel}}
 * Catalan: [[tocar]]
 * Chinese:
-*: Mandarin: {{t|cmn|演奏|tr=yǎnzòu|sc=Hani}}, {{qualifier|string instruments including piano}} {{t|cmn|彈|sc=Hani}}, {{t|cmn|弹|tr=tán|sc=Hani}}, {{qualifier|string instruments with a bow such as violin}} {{t|cmn|拉|tr=lā|sc=Hani}}, {{qualifier|wind instruments}} {{t|cmn|吹|tr=chuī|sc=Hani}}, {{qualifier|percussion instruments, especially gong}} {{t|cmn|敲|tr=qiāo|sc=Hani}}, {{qualifier|percussion instruments, especially drum}} {{t|cmn|打|tr=dǎ|sc=Hani}} 
+*: Mandarin: {{t|cmn|演奏|tr=yǎnzòu|sc=Hani}}, {{qualifier|string instruments including piano}} {{t|cmn|彈|sc=Hani}}, {{t|cmn|弹|tr=tán|sc=Hani}}&{{qualifier|formal}}{{t|cmn|彈奏|sc=Hani}}, {{t|cmn|弹奏|tr=tánzòu|sc=Hani}}, {{qualifier|string instruments with a bow such as violin}} {{t|cmn|拉|tr=lā|sc=Hani}}, {{qualifier|wind instruments}} {{t|cmn|吹|tr=chuī|sc=Hani}}&{{qualifier|formal}}{{t|cmn|吹奏|tr=chuīzòu|sc=Hani}}, {{qualifier|percussion instruments, especially gong}} {{t|cmn|敲|tr=qiāo|sc=Hani}}, {{qualifier|percussion instruments, especially drum}} {{t|cmn|打|tr=dǎ|sc=Hani}} 
 * Dutch: {{t+|nl|spelen}}, {{t+|nl|bespelen}}
 * Finnish: {{t+|fi|soittaa}}
 * French: {{t+|fr|jouer|alt=jouer de}}
@@ -170,7 +170,7 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 * Armenian: {{t-|hy|նվագել|tr=nvagel}}
 * Catalan: [[tocar]]
 * Chinese:
-*: Mandarin: {{t|cmn|演奏|tr=yǎnzòu|sc=Hani}}
+*: Mandarin: {{t|cmn|演奏|tr=yǎnzòu|sc=Hani}}, {{qualifier|string instruments including piano}} {{t|cmn|彈|sc=Hani}}, {{t|cmn|弹|tr=tán|sc=Hani}}&{{qualifier|formal}}{{t|cmn|彈奏|sc=Hani}}, {{t|cmn|弹奏|tr=tánzòu|sc=Hani}}, {{qualifier|string instruments with a bow such as violin}} {{t|cmn|拉|tr=lā|sc=Hani}}, {{qualifier|wind instruments}} {{t|cmn|吹|tr=chuī|sc=Hani}}&{{qualifier|formal}}{{t|cmn|吹奏|tr=chuīzòu|sc=Hani}}, {{qualifier|percussion instruments, especially gong}} {{t|cmn|敲|tr=qiāo|sc=Hani}}, {{qualifier|percussion instruments, especially drum}} {{t|cmn|打|tr=dǎ|sc=Hani}}
 * Czech: {{t+|cs|hrát}}
 * Dutch: {{t+|nl|spelen}}
 * Finnish: {{t+|fi|soittaa}}
