--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -246,6 +246,7 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 * Burmese: {{t+|my|ကစား|tr=găza:|sc=Mymr}}
 * Catalan: participar, jugar
 * Chinese: {{qualifier|games}} {{t|cmn|玩|tr=wán|sc=Hani}}, {{qualifier|sports with pedal hitting, such as football}} {{t|cmn|踢|tr=tī|sc=Hani}}, {{qualifier|sports with manual hitting, such as basketball and badminton}} {{t|cmn|打|tr=dǎ|sc=Hani}}, {{qualifier|sports with throwing, such as discus throw}} {{t|cmn|掷|tr=zhì|sc=Hani}}&{{qualifier|colloquial&informal}} {{t|cmn|扔|tr=rēng|sc=Hani}}, {{qualifier|sports with pushing, such as shot put}} {{t|cmn|推|tr=tuī|sc=Hani}}
+*: Mandarin: {{t|cmn|跑|tr=pǎo|sc=Hani}} {{qualifier|sports with running, such as marathon}}
 * Czech: {{t+|cs|hrát}}
 * Dutch: [[spelen]], [[meespelen]]
 * Finnish: {{t+|fi|pelata}}
