--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -169,8 +169,8 @@ From {{etyl|enm|en}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 * Sardinian: {{t-|sc|ponte}}, {{t-|sc|ponti}}
 * Scottish Gaelic: {{t-|gd|drochaid|f}}
 * Serbo-Croatian:
-*: Cyrillic: {{t-|sh|мо̑ст|m|sc=Cyrl}}, {{t-|sh|ћу̀прија|f|sc=Cyrl}} ''(arch./poetic)''
-*: Roman: {{t-|sh|mȏst|m|sc=Latn}}, {{t-|sh|ćùprija|f|sc=Latn}} ''(arch./poetic)''
+*: Cyrillic: {{t-|sh|мо̑ст|m|sc=Cyrl}}, {{t-|sh|ћу̀прија|f|sc=Cyrl}} {{qualifier|archaic, poetic}}
+*: Roman: {{t-|sh|mȏst|m|sc=Latn}}, {{t-|sh|ćùprija|f|sc=Latn}} {{qualifier|archaic, poetic}}
 * {{trreq|sd}}
 * Sinhalese: {{t-|si|පාලම|tr=pālama|sc=Sinh}}
 * Slovak: {{t-|sk|most|m}}
