--- a/en/昱/昱.16985.wikitext
+++ b/en/昱/昱.16985.wikitext
@@ -1,9 +1,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=6010<sub>8</sub>|canj=日卜廿 (AYT)}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=6010<sub>8</sub>|canj=日卜廿 (AYT)|ids=⿱[[日]][[立]]}}
 
-# bright light, sunlight
+# [[bright]] [[light]], [[sunlight]]
 # [[dazzling]]
 
 ====References====
