--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -301,19 +301,19 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 ===Verb===
 {{en-verb|cuts|cutting|cut}}
 
-# {{context|transitive|lang=en}} &nbsp; To [[perform]] an [[incision]] on, for example with a [[knife]].
+# {{context|transitive|lang=en}} To [[perform]] an [[incision]] on, for example with a [[knife]].
 #* I '''cut''' the skin on my arm.
-# {{context|transitive|lang=en}} &nbsp; To [[divide]] with a [[knife]], [[scissors]], or another [[sharp]] [[instrument]].
+# {{context|transitive|lang=en}} To [[divide]] with a [[knife]], [[scissors]], or another [[sharp]] [[instrument]].
 #* Would you please '''cut''' the cake?
-# {{context|transitive|lang=en}} &nbsp; To [[separate]] from [[prior]] [[association]]; to remove a portion of a [[recording]] during [[editing]].
+# {{context|transitive|lang=en}} To [[separate]] from [[prior]] [[association]]; to remove a portion of a [[recording]] during [[editing]].
 #* Travis was '''cut''' from the team.
-# {{context|transitive|computing|lang=en}} &nbsp; To [[remove]] and place in [[memory]] for later use.
+# {{context|transitive|computing|lang=en}} To [[remove]] and place in [[memory]] for later use.
 #* Select the text, '''cut''' it, and then paste it in the other application.
-# {{context|intransitive|lang=en}} &nbsp; To [[enter]] a [[queue]] in the wrong place.
+# {{context|intransitive|lang=en}} To [[enter]] a [[queue]] in the wrong place.
 #* One student kept trying to '''cut''' in front of the line.
-# {{context|intransitive|cinema|audio|usually as imperative|lang=en}} &nbsp; To [[cease]] [[record]]ing activities.
+# {{context|intransitive|cinema|audio|usually as imperative|lang=en}} To [[cease]] [[record]]ing activities.
 #* After the actors read their lines, the director yelled "'''Cut'''!"
-# {{context|transitive|lang=en}} &nbsp; To [[reduce]], especially intentionally.
+# {{context|transitive|lang=en}} To [[reduce]], especially intentionally.
 #* {{quote-magazine|date=2013-05-17
 |author=George Monbiot|authorlink=George Monbiot
 |title=Money just makes the rich suffer
@@ -322,9 +322,9 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 |url=http://www.guardian.co.uk/commentisfree/2013/may/06/politics-envy-keenest-rich
 |passage=In order to grant the rich these pleasures, the social contract is reconfigured. The welfare state is dismantled. Essential public services are '''cut''' so that the rich may pay less tax.&nbsp;[&hellip;]}}
 #* They're going to '''cut''' salaries by fifteen percent.
-# {{context|transitive|lang=en}} &nbsp; To [[form]] or [[shape]] by cutting.
+# {{context|transitive|lang=en}} To [[form]] or [[shape]] by cutting.
 #* I have three diamonds to '''cut''' today.
-# {{context|intransitive|lang=en}} &nbsp; To [[intersect]] or [[cross]] in such a way as to [[divide]] in [[half]] or nearly so.
+# {{context|intransitive|lang=en}} To [[intersect]] or [[cross]] in such a way as to [[divide]] in [[half]] or nearly so.
 #* This road '''cuts''' right through downtown.
 #* {{quote-news
 |year=2011
@@ -334,24 +334,24 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 |work=Guardian Online
 |url=http://www.guardian.co.uk/football/2011/jan/18/manchester-city-leicester-city-fa-cup
 |passage=Leicester's response was swift although the referee, Mark Halsey, was generous in the extreme when he awarded the penalty from which Paul Gallagher made it 1-1. Neither Joleon Lescott nor Vieira appeared to make any contact with Dyer as he '''cut''' between them.}}
-# {{context|transitive|cricket|lang=en}} &nbsp; To make the ball spin sideways by running one's [[finger]]s down the side of the ball while bowling it. {{rfex}}
-# {{context|transitive|informal|lang=en}} &nbsp; To not [[attend]] a [[class]], especially when not [[permit]]ted.
+# {{context|transitive|cricket|lang=en}} To make the ball spin sideways by running one's [[finger]]s down the side of the ball while bowling it. {{rfex}}
+# {{context|transitive|informal|lang=en}} To not [[attend]] a [[class]], especially when not [[permit]]ted.
 #* I '''cut''' fifth period to hang out with Angela.
-# {{context|intransitive|lang=en}} &nbsp; To change [[direction]] suddenly.
+# {{context|intransitive|lang=en}} To change [[direction]] suddenly.
 #* The football player '''cut''' to his left to evade a tackle.
-# {{context|transitive|intransitive|lang=en}} &nbsp; To [[divide]] a [[pack]] of [[playing card]]s into two.
+# {{context|transitive|intransitive|lang=en}} To [[divide]] a [[pack]] of [[playing card]]s into two.
 #* If you '''cut''' then I'll deal.
-# {{context|transitive|slang|lang=en}} &nbsp; To [[write]].
+# {{context|transitive|slang|lang=en}} To [[write]].
 #* '''Cut''' orders.
 #* '''Cut''' a check.
-# {{context|transitive|slang|lang=en}} &nbsp; To [[dilute]] a liquid, usually [[alcohol]].
+# {{context|transitive|slang|lang=en}} To [[dilute]] a liquid, usually [[alcohol]].
 #* The bartender '''cuts''' his beer to save money and now it's all watery.
-# {{context|transitive|dated|lang=en}} &nbsp; To [[ignore]] as a social [[snub]].
+# {{context|transitive|dated|lang=en}} To [[ignore]] as a social [[snub]].
 #* After the incident at the dinner party, people started to '''cut''' him on the street.
-# {{context|transitive|slang|lang=en}} &nbsp; To [[wound]] with a knife.
+# {{context|transitive|slang|lang=en}} To [[wound]] with a knife.
 #* '''1990''', Stephen Dobyns, ''The house on Alexandrine''
 #*: We don't want your money no more. We just going to '''cut''' you.
-# {{context|transitive|lang=en}} &nbsp; To exhibit (a quality).
+# {{context|transitive|lang=en}} To exhibit (a quality).
 #* {{quote-news
 |year=2011
 |date=January 25
