--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -105,7 +105,7 @@ From {{etyl|enm|en}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang|en
 * Latin: {{t+|la|sugo}}
 {{trans-mid}}
 * Latvian: {{t+|lv|sūkt}}
-* Lithuanian: {{t-|lt|čiulpti|alt=čiul̃pti}}
+* Lithuanian: {{t-|lt|čiul̃pti}}
 * Macedonian: {{t-|mk|цица|tr=cíca}}
 * Malay: {{t-|ms|hisap}}, {{t-|ms|sedut}}
 * Maori: {{t-|mi|momi}}, {{t-|mi|ngote}}, {{t-|mi|mote}}
