--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -89,17 +89,17 @@ Supposed by some to derive from {{etyl|gd|en}} {{term|stob||to prick, to prod, t
 |title=[[w:The Case of Miss Elliott|The Tremarn Case]]
 |chapter=1|url=http://openlibrary.org/works/OL8479084W
 |passage=“There the cause of death was soon ascertained ; the victim of this daring outrage had been '''stabbed''' to death from ear to ear with a long, sharp instrument, in shape like an antique stiletto, which […] was subsequently found under the cushions of the hansom.&nbsp;[…]”}}
-#: ''If you '''stab''' him in the heart he won't live long enough to retaliate.''
+#: {{usex|lang=en|If you '''stab''' him in the heart he won't live long enough to retaliate.}}
 # {{context|transitive|lang=en}} To [[thrust]] in a stabbing motion.
-#: ''to '''stab''' a dagger into a person''
+#: {{usex|lang=en|to '''stab''' a dagger into a person}}
 # {{context|intransitive|lang=en}} To [[recklessly]] hit with the [[tip]] of a [[pointed]] [[object]], such as a [[weapon]] or [[finger]] {{non-gloss definition|(often used with [[at]])}}.
-#* Dryden
+#* {{w|John Dryden}}
 #*: None shall dare / With shortened sword to '''stab''' in closer war.
-#: ''He '''stabbed''' at my face with the twig but luckily kept missing my eyes.''
+#: {{usex|lang=en|He '''stabbed''' at my face with the twig but luckily kept missing my eyes.}}
 # {{context|intransitive|lang=en}} To cause a [[sharp]], painful [[sensation]] {{non-gloss definition|(often used with [[at]])}}.
-#: ''The snow from the blizzard was '''stabbing''' at my face as I skied down the mountain.''
+#: {{usex|lang=en|The snow from the blizzard was '''stabbing''' at my face as I skied down the mountain.}}
 # {{context|transitive|figurative|lang=en}} To injure secretly or by malicious falsehood or slander.
-#: ''to '''stab''' a person's reputation''
+#: {{usex|lang=en|to '''stab''' a person's reputation}}
 
 ====Derived terms====
 * [[stabber]]
