t+lv:[[griezt]] t-balance ([[WT:EDIT|Assisted]]) <cut#23281230>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -468,9 +468,10 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * Jèrriais: {{tø|roa-jer|coper}}
 * Khmer: {{t+|km|កាត់|tr=kat|sc=Khmr}}
 * Korean: {{t+|ko|끊다|tr=kkeunta|sc=Kore}}
-{{trans-mid}}
 * Lao: {{t-|lo|ຕັດ|tr= tát|sc=Laoo}}
 * Latin: {{t-|la|inseco}}, {{t-|la|incido}}
+* Latvian: {{t-|lv|griezt}}
+{{trans-mid}}
 * Macedonian: {{t-|mk|сече|tr=séče|sc=Cyrl}}, {{t-|mk|реже|tr=réže|sc=Cyrl}}
 * Neapolitan: {{tø|nap|taglià}}
 * Occitan: {{t+|oc|talhar}}
@@ -519,14 +520,15 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 *: Old French: {{tø|fro|colper}}, {{tø|fro|couper}}, {{tø|fro|coper}}
 * Galician: {{t+|gl|cortar}}
 * German: {{t+|de|schneiden}}
-{{trans-mid}}
 * Hebrew: {{t+|he|חתך|tr=khatákh}}
+{{trans-mid}}
 * Icelandic: {{qualifier|with a knife}} {{t+|is|skera}}, {{qualifier|with scissors}} {{t-|is|klippa}}
 * Irish: {{t-|ga|bain}} {{qualifier|grass, hay, etc.}}
 * Italian: {{t+|it|tagliare}}
 * Japanese: {{t+|ja|切る|tr=きる, kiru}}
 * Jèrriais: {{tø|roa-jer|coper}}
 * Latin: {{t-|la|seco}}, {{t-|la|interseco}}, {{t-|la|curto}}
+* Latvian: {{t-|lv|griezt}}
 * Maori: {{t-|mi|whakaiho}} {{qualifier|of hair}}
 * Portuguese: {{t+|pt|cortar}}
 * Quechua: {{t-|qu|kuchuy}}, {{t-|qu|p'itiy}}
