--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -47,6 +47,7 @@ From {{etyl|enm|en}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 # {{context|graph theory|lang=en}} An [[edge]] which, if [[remove]]d, changes a [[connected graph]] to one that is not connected.
 # {{context|wrestling|lang=en}} A defensive [[position]] in which the [[wrestler]] is supported by his feet and head, belly-up, in order to prevent touch-down of the shoulders and eventually to [[dislodge]] an opponent who has established a position on top.
 # {{context|poetry|lang=en}} A point in a [[line]] where a [[break]] in a word unit cannot occur.
+# A solid crust of undissolved salt in a [[water softener]].
 
 =====Derived terms=====
 {{rel-top|Terms derived from ''bridge'' (etymology 1)}}
