--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -68,27 +68,27 @@ From {{etyl|enm|en}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 
 =====Translations=====
 {{trans-top|construction or natural feature that spans a divide}}
-* Abkhaz: {{t-|ab|ацҳа|tr=acẋa|sc=Cyrl}}
+* Abkhaz: {{t-|ab|ацҳа|sc=Cyrl}}
 * Afrikaans: {{t-|af|brug}}
 * {{trreq|ak}}
 * Albanian: {{t-|sq|urë|f}}
 * Arabic: {{t-|ar|جسر|m|tr=jisr|sc=Arab}}
 *: Egyptian Arabic: {{tø|arz|كوبري|m|tr=kobri|sc=Arab}}
 * {{trreq|an}}
-* Armenian: {{t+|hy|կամուրջ|tr=kamurǰ}}
+* Armenian: {{t+|hy|կամուրջ}}
 * Asturian: {{t-|ast|ponte|f}}, {{t-|ast|puente|m}}
 * Azeri: {{t+|az|körpü}}
 * Bashkir: {{tø|ba|күпер|tr=küper|sc=Cyrl}}
 * Basque: {{t-|eu|zubi}}
 * Belarusian: {{t-|be|мост|m|tr=most}}
 * Bengali: {{t-|bn|পুল|tr=pul|sc=Beng}}
-* Breton: {{t+|br|pont|m}}, pontoù {{g|p}}
+* Breton: {{t+|br|pont|m}}
 * Bulgarian: {{t+|bg|мост|m|tr=most}}
 * Burmese: {{t+|my|တံတား|tr=dăda:|sc=Mymr}}
 * Catalan: {{t-|ca|pont|m}}
 * Central Atlas Tamazight: {{tø|tzm|ⵜⵉⵍⴳⴳⵯⵉⵜ|f|tr=tilggʷit|sc=Tfng}}
 * Chamicuro: {{tø|ccc|pwente}}
-* Chechen: {{tø|ce|тӏай|tr=thaii}}
+* Chechen: {{tø|ce|тӏай}}
 * Chinese:
 *: Mandarin: {{t|cmn|橋|sc=Hani}}, {{t|cmn|桥|tr=qiáo|sc=Hani}}, {{t|cmn|橋樑|sc=Hani}}, {{t|cmn|桥梁|tr=qiáoliáng|sc=Hani}}
 * Czech: {{t+|cs|most|m}}
@@ -108,7 +108,7 @@ From {{etyl|enm|en}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 * Gujarati: {{t-|gu|પુલ|tr=pul|sc=Gujr}}
 * {{trreq|ha}}
 * Hawaiian: {{tø|haw|uapo}}
-* Hebrew: {{t+|he|גשר|m|tr=gesher}}
+* Hebrew: {{t+|he|גֶשֶר|m|tr=gesher}}
 * Hindi: {{t-|hi|पुल|m|tr=pul|sc=Deva}}
 * Hungarian: {{t+|hu|híd}}
 * Icelandic: {{t+|is|brú|f}}
@@ -133,9 +133,8 @@ From {{etyl|enm|en}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 * Latgalian: {{tø|ltg|tylts}}
 * Latin: {{t+|la|pons|m}}
 * Latvian: {{t+|lv|tilts|m}}
-* Lingala: [[gwagwa]], [[gbagba]] (''pl'' bagbagba)
+* Lingala: {{t|ln|gwagwa}}, {{t|ln|gbagba}}
 * Lithuanian: {{t+|lt|tiltas|m}}
-* Lower Sorbian: {{tø|dsb|móst|m}}
 * {{trreq|lg}}
 {{trans-mid}}
 * Luxembourgish: {{t+|lb|Bréck|f}}
@@ -177,6 +176,9 @@ From {{etyl|enm|en}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 * Slovak: {{t-|sk|most|m}}
 * Slovene: {{t+|sl|most|m}}
 * {{trreq|so}}
+* Sorbian:
+*: Lower Sorbian: {{tø|dsb|móst|m}}
+*: Upper Sorbian: {{t-|hsb|móst|m}}
 * Spanish: {{t+|es|puente|m}}, {{t+|es|bóveda|f}} {{qualifier|El Salvador}}
 * Swahili: {{t+|sw|daraja}}
 * Swedish: {{t+|sv|bro|c}}
@@ -190,8 +192,7 @@ From {{etyl|enm|en}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 * {{trreq|to}}
 * Turkish: {{t+|tr|köprü}}
 * Turkmen: {{t-|tk|köpri}}
-* Ukrainian: {{t-|uk|міст|m|tr=mist}} (plural: {{t-|uk|мости|p|tr=mostý}})
-* Upper Sorbian: {{t-|hsb|móst|m}}
+* Ukrainian: {{t-|uk|міст|m|tr=mist}}
 * Urdu: {{t-|ur|پل|m|tr=pul}}
 * Uyghur: {{t+|ug|كۆۋرۈك|sc=ug-Arab}}
 * Uzbek: {{t-|uz|koʻprik|sc=Latn}}
@@ -209,7 +210,7 @@ From {{etyl|enm|en}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 {{trans-bottom}}
 
 {{trans-top|bony ridge of the nose}}
-* Armenian: {{t-|hy|քթարմատ|tr=k't'armat}}
+* Armenian: {{t-|hy|քթարմատ}}
 * Danish: {{t-|da|næseben|n}}
 * Faroese: {{t-|fo|nasabein|n}}
 * Finnish: {{t-|fi|nenän selkä}}
@@ -248,7 +249,7 @@ From {{etyl|enm|en}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 {{trans-bottom}}
 
 {{trans-top|nautical}}
-* Armenian: {{t-|hy|նավապետի կամրջակ|tr=navapeti kamrǰak}}
+* Armenian: {{t-|hy|նավապետի կամրջակ}}
 * Bulgarian: {{t-|bg|мостик|m}}
 * Chinese:
 *: Mandarin: {{t|cmn|船橋|sc=Hani}}, {{t|cmn|船桥|tr=chuánqiáo|sc=Hani}}
