--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -165,13 +165,18 @@ From {{etyl|enm|en}} {{term|costen|lang=enm}}, from {{etyl|fro|en}} {{term|coste
 ====Verb====
 {{en-verb|costs|costing|'''[[cost]]''' or '''[[costed]]'''}} See Usage notes.
 
-# To [[incur]] a [[charge]], a [[price]].
+# To [[incur]] a [[charge]]; to require payment of a [[price]].
 #: ''This shirt '''cost''' $50, while this was cheaper at only $30.''
-#: ''It will '''cost''' you a lot of money to take a round-the-world trip.''
-#: ''Entry to the museums used to be free, but now it '''costs''' 5 pounds.''
-# To cause something to be lost.
-#: ''Trying to rescue the man from the frozen lake '''cost''' me my health.''
-# To [[calculate]] or [[estimate]] a value.
+#: ''It will '''cost''' you a lot of money to take a trip around the world.''
+# To cause something to be lost; to cause the expenditure or relinquishment of.
+#: ''Trying to rescue the man from the burning building '''cost''' them their lives.''
+#* Shakespeare
+#*: though it '''cost''' me ten nights' watchings
+# {{context|obsolete|lang=en}} To require to be borne or suffered; to cause.
+#* Milton
+#*: to do him wanton rites, which '''cost''' them woe
+# To [[calculate]] or [[estimate]] a price.
+#: ''I'd '''cost''' the repair work at a few thousand.''
 
 =====Usage notes=====
 The past tense and past participle is ''cost'' in the sense of "this computer '''cost''' me £600", but ''costed'' in the sense of 'calculated', "the project was '''costed''' at $1 million."
