--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -119,6 +119,7 @@ From {{etyl|fro|en}} {{term|safran|lang=fro}}, from {{etyl|ML.|en}} {{term|safra
 * Persian: {{t+|fa|زعفرانی|tr=za,ferāni}}
 * Polish: {{t+|pl|szafran|m}}
 * Portuguese: {{t+|pt|açafrão|m}}
+* Romanian: {{t+|ro|șofran|m}}
 * Russian: {{t+|ru|шафран|m|tr=šafrán}}
 * Turkish: {{t+|tr|safran}}
 * Urdu: {{t-|ur|کیسری|tr=kesarī}}, {{t-|ur|کیسریا|tr=kesariyā}}
@@ -134,11 +135,12 @@ From {{etyl|fro|en}} {{term|safran|lang=fro}}, from {{etyl|ML.|en}} {{term|safra
 * Hindi: {{t+|hi|केसरी|tr=kesarī}}, {{t-|hi|केसरिया|tr=kesariyā}}
 * Hungarian: {{t+|hu|sáfrány}}
 * Italian: {{t+|it|zafferano|m}}
-{{trans-mid}}
 * Japanese: {{t-|ja|サフラン色|tr=safuraniro}}
+{{trans-mid}}
 * Marathi: {{t+|mr|केसरी|tr=kesarī|sc=Deva}}
 * Norwegian: {{t+|no|safran}}
 * Polish: {{t+|pl|szafran|m}}, ([[kolor]]) [[szafranowy]] {{g|m}}
+* Romanian: {{t+|ro|șofran|m}}
 * Swahili: {{t-|sw|rangi ya zafarani}}
 * Swedish: {{t+|sv|saffran}}
 * Turkish: {{t+|tr|safran}}
@@ -165,9 +167,10 @@ From {{etyl|fro|en}} {{term|safran|lang=fro}}, from {{etyl|ML.|en}} {{term|safra
 * Italian: {{t+|it|zafferano|m}}
 * Japanese: [[サフラン色]]の (safuranirono)
 * Marathi: {{t+|mr|केसरी|tr=kesarī|sc=Deva}}
-{{trans-mid}}
 * Polish: {{t+|pl|szafranowy}}
+{{trans-mid}}
 * Portuguese: {{t+|pt|açafrão}}
+* Romanian: {{t-|ro|șofrăniu}}
 * Russian: {{t+|ru|шафранный|tr=šafránnyj}}, {{t+|ru|шафрановый|tr=šafránovyj}}
 * Swedish: {{t-|sv|saffransfärgad}}, {{t-|sv|saffransgul}}
 * Urdu: {{t-|ur|کیسری|tr=kesarī}}, {{t-|ur|کیسریا|tr=kesariyā}}
