--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -257,10 +257,12 @@ From {{etyl|ang|en}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[ge
 #*{{quote-book|year=1963|author={{w|Margery Allingham}}|title={{w|The China Governess}}
 |chapter=18|url=http://openlibrary.org/works/OL2004261W
 |passage=‘Then the father has a great '''fight''' with his terrible conscience,’ said Munday with granite seriousness. ‘Should he make a row with the police […]? Or should he say nothing about it and condone brutality for fear of appearing in the newspapers?}}
+#*{{quote-magazine|date=2013-08-10|volume=408|issue=8848|magazine={{w|The Economist}}
+|title=[http://www.economist.com/news/leaders/21583277-worlds-biggest-polluter-going-green-it-needs-speed-up-transition-can-china21583270-new-zealands-plan-regulate-designer-drugs-better-trying-ban-them-and-failing-new A new prescription]
+|passage=As the world's drug habit shows, governments are failing in their quest to monitor every London window-box and Andean hillside for banned plants. But even that Sisyphean task looks easy next to the '''fight''' against synthetic drugs.}}
 #: {{usex|I'll put up a '''fight''' to save this company.|lang=en}}
 # The [[will]] or [[ability]] to fight.
-#: {{usex|As soon as he saw the size of his opponent, all the '''fight''' went out of him.|lang=en}}
-#: {{usex|That little guy have a little '''fight''' inside him after all.|lang=en}}
+#: {{usex|That little guy has a bit of '''fight''' in him after all.&nbsp;&nbsp; As soon as he saw the size of his opponent, all the '''fight''' went out of him.|lang=en}}
 
 =====Synonyms=====
 * See also [[Wikisaurus:fight]]
