this definition (noun #17) also applies to baseball <catch#23337712>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -59,7 +59,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 # {{context|countable|music|lang=en}} The [[refrain]]; a line or lines of a song which are repeated from verse to verse. {{jump|refrain|s}}
 #* {{quote-book|2003|Robert Hugh Benson|Come Rack! Come Rope!|page=268|url=http://books.google.com/books?id=f5abPx1KeKQC
 |passage=The phrase repeated itself like the '''catch''' of a song. }}
-# {{context|countable|cricket|lang=en}} The act of catching a hit ball before it reaches the ground, resulting in an out.
+# {{context|countable|cricket|baseball|lang=en}} The act of catching a hit ball before it reaches the ground, resulting in an out.
 #* {{quote-news|1997|May 10|Henry Blofeld|Cricket: Rose and Burns revive Somerset|The Independent|url=http://www.highbeam.com/doc/1P2-4855186.html
 |passage=It was he who removed Peter Bowler with the help of a good '''catch''' at third slip.}}
 # {{context|countable|cricket|lang=en}} A player in respect of his catching ability; particularly one who catches well.
