--- a/en/昷/昷.16992.wikitext
+++ b/en/昷/昷.16992.wikitext
@@ -3,7 +3,7 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=9|four=|canj=日月廿 (ABT)|ids=⿱[[日]][[皿]]}}
 
-# to feed a prisoner
+# to [[feed]] a [[prisoner]]
 
 ====References====
 * {{Han ref|kx=0494.090|dkj=13870|dj=0859.030|hdz=21500.090|uh=6637|ud=26167}}
