--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -184,7 +184,7 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 
 {{trans-top|electronic device}}
 * {{trreq|ar}}
-* {{trreq|hy}}
+* Armenian: {{t-|hy|բրիք|sc=Armn}}
 * Chinese:
 *: Mandarin: {{t|cmn|砖头|tr=zhuāntóu|sc=Hani}}
 * Czech: {{t+|cs|cihla|f}}
