--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -91,10 +91,8 @@ See the usage notes in the entry ''[[blond]]''.
 # {{de-form-adj|w|f|a|blond}}
 # {{de-form-adj|w|n|n|blond}}
 # {{de-form-adj|w|n|a|blond}}
-# {{de-form-adj|m|f|n|blond}}
-# {{de-form-adj|m|f|a|blond}}
-
-----
+# {{de-form-adj|m|f|n|blond}
+I HATE BLONDES THEY ARE Dumb so that means I am dumb as fack
 
 ==Swedish==
 
