--- a/en/做/做.11114.wikitext
+++ b/en/做/做.11114.wikitext
@@ -21,6 +21,19 @@
 
 ----
 
+==Hakka==
+
+===Hanzi===
+{{hak-hanzi|poj=[[tsò]] (tso<sup>3</sup>)|gd=|hpy=zo4}}
+
+# {{defn|lang=hak|sort=人09}}
+
+====References====
+*[http://minhakka.ling.sinica.edu.tw/bkg/hakyin/search.php?DETAIL=1&LIMIT=id=50883&dbname=su_tian_1&graph=2 Academia Sinica - Hakka-English Dictionary]
+*Lau, Chun-fat. ''Hakka Pinyin Dictionary'' (Chinese). [[Hong Kong]]: [[w:Chinese University of Hong Kong|The Chinese University Press]], 1997 <small>(Chinese IME supplement)</small> ISBN 962-201-750-9.
+
+----
+
 ==Japanese==
 
 ===Kanji===
