--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -25,6 +25,19 @@
 
 ----
 
+==Hakka==
+
+===Hanzi===
+{{hak-hanzi|poj=[[síong]] (siong<sup>2</sup>)|gd=|hpy=xiong3}}
+
+# {{defn|lang=hak|sort=心09}}
+
+====References====
+*[http://minhakka.ling.sinica.edu.tw/bkg/hakyin/search.php?DETAIL=1&LIMIT=id=39415&dbname=su_tian_1&graph=2 Academia Sinica - Hakka-English Dictionary]
+*Lau, Chun-fat. ''Hakka Pinyin Dictionary'' (Chinese). [[Hong Kong]]: [[w:Chinese University of Hong Kong|The Chinese University Press]], 1997 <small>(Chinese IME supplement)</small> ISBN 962-201-750-9.
+
+----
+
 ==Japanese==
 
 ===Kanji===
