--- a/en/垣/垣.13095.wikitext
+++ b/en/垣/垣.13095.wikitext
@@ -27,9 +27,8 @@
 ====Readings====
 * {{ja-readings|on=[[えん]] (en)|kun=[[かき]] (kaki)}}
 
-{{kanji readings tab|垣|かき|sort=かき}}
 ===Noun===
-{{ja-noun|k|hira=かき|rom=kaki}} 
+{{ja-noun|かき}} 
 
 # [[fence]]
 
