t+dsb:[[cycaś]] ([[WT:EDIT|Assisted]]) <suck#23435577>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -123,6 +123,8 @@ From {{etyl|enm|en}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang|en
 *: Cyrillic: {{t|sh|си̏сати}}
 *: Roman: {{t|sh|sȉsati}}
 * Slovak: {{t|sk|cmúľať}}
+* Sorbian:
+*: Lower Sorbian: {{t|dsb|cycaś}}
 * Spanish: {{t+|es|chupar}}, {{t+|es|sorber}}
 * Swedish: {{t+|sv|suga}}
 * Tajik: {{t|tg|макидан|tr=makidan|sc=Cyrl}}
