--- a/en/垚/垚.13086.wikitext
+++ b/en/垚/垚.13086.wikitext
@@ -16,7 +16,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=yiu1}}
+{{yue-hanzi|jyut=[[jiu1]], [[jiu4]]|y=yiu1, yiu4}}
 
 # {{defn|lang=yue|sort=土06}}
 
