--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -84,7 +84,7 @@ From {{etyl|enm|en}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{et
 * Persian: {{t+|fa|پالتو|tr=pâlto|sc=fa-Arab}}, {{t+|fa|کت|tr=kot|sc=fa-Arab}}
 * Polish: {{t+|pl|płaszcz|m}}
 * Portuguese: {{t+|pt|casaco|m}}
-* Russian: {{t+|ru|пальто|n|tr=pal’tó|sc=Cyrl}}, {{t+|ru|пиджак|m|tr=pidžák|sc=Cyrl}} (''jacket'')
+* Russian: {{t+|ru|пальто́|n|tr=palʹtó|sc=Cyrl}}, {{t+|ru|пиджа́к|m|tr=pidžák|sc=Cyrl}} {{qualifier|jacket}}
 * Scottish Gaelic: {{t|gd|còta|m}}
 * Slovak: {{t|sk|kabát|m}}, {{t|sk|plášť|m}}
 * Slovene: {{t+|sl|plašč|m}}
@@ -92,6 +92,7 @@ From {{etyl|enm|en}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{et
 * Swahili: {{t+|sw|koti}}
 * Swedish: {{t+|sv|rock|c}}
 * Taos: {{t|twf|kùti’ína}}
+* {{trreq|uk}}
 * {{trreq|vo}}
 {{trans-bottom}}
 
