--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -23,6 +23,9 @@ Cognate with {{etyl|sco|-}} {{term|cum||to come|lang=sco}}, {{etyl|stq|-}} {{ter
 #: {{usex|lang=en|She’ll be '''coming''' ’round the mountain when she '''comes'''{{...}}}}
 # {{context|intransitive|lang=en}} To [[arrive]].
 #: {{usex|lang=en|The guests '''came''' at eight o'clock.}}
+#*{{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
+|title={{w|The Celebrity}}|chapter=5
+|passage=Then '''came''' a maid with hand-bag and shawls, and after her a tall young lady. She stood for a moment holding her skirt above the grimy steps,{{...}}, and the light of the reflector fell full upon her.}}
 # {{context|intransitive|lang=en}} To [[appear]], to [[manifest]] itself.
 #: {{usex|lang=en|The pain in his leg '''comes''' and goes.}}
 # {{context|intransitive|lang=en}} To take a position to something else in a [[sequence]].
@@ -30,10 +33,10 @@ Cognate with {{etyl|sco|-}} {{term|cum||to come|lang=sco}}, {{etyl|stq|-}} {{ter
 # {{context|intransitive|slang|lang=en}} To achieve [[orgasm]]; to [[cum]].
 #: {{usex|lang=en|He '''came''' after a few minutes.}}
 # {{context|copulative|figuratively|with ''close''|lang=en}} To [[approach]] a state of being or accomplishment.
+#: {{usex|lang=en|They '''came''' very close to leaving on time.&nbsp;&nbsp; His test scores '''came''' close to perfect.}}
 #*{{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
 |title={{w|The Celebrity}}|chapter=3
 |passage=Now all this was very fine, but not at all in keeping with the Celebrity's character as I had '''come''' to conceive it. The idea that adulation ever cloyed on him was ludicrous in itself. In fact I thought the whole story fishy, and '''came''' very near to saying so.}}
-#: {{usex|lang=en|They '''came''' very close to leaving on time.&nbsp;&nbsp; His test scores '''came''' close to perfect.}}
 # {{context|figuratively|with ''to''|lang=en}} To take a particular [[approach]] or [[point of view]] in regard to something.
 #: {{usex|lang=en|He '''came''' to SF literature a confirmed technophile, and nothing made him happier than to read a manuscript thick with imaginary gizmos and whatzits.}}
 # {{context|copulative|archaic|lang=en}} To [[become]], to [[turn out]] to be.
