--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -245,6 +245,9 @@
 ===Etymology 2===
 Probably {{etyl|fr|en}} {{term|poche|lang=fr}}. See {{term|pouch|lang=en}}.
 
+====Pronunciation====
+{{rfp}}
+
 ====Noun====
 {{en-noun|es}}
 
