/* Verb */ Quote added <feel#23544955>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -34,6 +34,9 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 # {{context|intransitive|copulative|lang=en}} To experience an emotion or other mental state.
 #: {{usex|He obviously '''feels''' strongly about it.|lang=en}}
 #: {{usex|She '''felt''' even more upset when she heard the details.|lang=en}}
+#*{{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
+|title={{w|The Celebrity}}|chapter=5
+|passage=Then we relapsed into a discomfited silence, and wished we were anywhere else. But Miss Thorn relieved the situation by laughing aloud, and with such a hearty enjoyment that instead of getting angry and more mortified we began to laugh ourselves, and instantly '''felt''' better.}}
 # {{context|copulative|lang=en}} To [[seem]] (through [[touch]] or otherwise).
 #: {{usex|It looks like wood, but it '''feels''' more like plastic.|lang=en}}
 #: {{usex|This is supposed to be a party, but it '''feels''' more like a funeral!|lang=en}}
