#* J. A. Symonds  #*: This excellent man {{...}} '''counted''' among the best and wisest of English statesmen.  # {{context|obsolete|lang=en}} To take account or note (of).  #* Shakespeare  #*: No man '''counts''' of her beauty.  # {{context|UK|legal|lang <count#23567474>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -111,12 +111,19 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 # {{context|intransitive|lang=en}} To be of [[significance]]; to [[matter]].
 #: {{usex|lang=en|Your views don't '''count''' here.&nbsp;&nbsp; It doesn't '''count''' if you cheat with someone when you're drunk.}}
 # {{context|intransitive|lang=en}} To be an [[example]] of something.
+#* J. A. Symonds
+#*: This excellent man {{...}} '''counted''' among the best and wisest of English statesmen.
 #* {{quote-magazine|date=2013-08-03|volume=408|issue=8847|magazine={{w|The Economist}}
 |title=[http://www.economist.com/news/finance-and-economics/21582498-america-has-changed-way-it-measures-gdp-boundary-problems Boundary problems]
 |passage=Economics is a messy discipline: too fluid to be a science, too rigorous to be an art. Perhaps it is fitting that economists’ most-used metric, gross domestic product (GDP), is a tangle too.{{...}}But as a foundation for analysis it is highly subjective: it rests on difficult decisions about what '''counts''' as a territory, what '''counts''' as output and how to value it. Indeed, economists are still tweaking it.}}
 #: {{usex|lang=en|Apples '''count''' as a type of fruit.}}
 # {{context|transitive|lang=en}} To [[consider]] something an example of something.
-#: {{usex|lang=en|He '''counts''' himself as a hero after saving the cat from the river.&nbsp;&nbsp; I '''count''' you as more than a friend.}}
+#: {{usex|lang=en|He '''counts''' himself a hero after saving the cat from the river.&nbsp;&nbsp; I '''count''' you as more than a friend.}}
+# {{context|obsolete|lang=en}} To take account or note (of).
+#* Shakespeare
+#*: No man '''counts''' of her beauty.
+# {{context|UK|legal|lang=en}} To plead orally; to argue a matter in court; to recite a count.
+#: {{rfquotek|Burrill}}
 
 =====Derived terms=====
 {{rel-top|Terms derived from ''count'' (verb)}}
