t+dsb:[[rězaś]] ([[WT:EDIT|Assisted]]) <cut#23604640>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -489,6 +489,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * Slovak: {{t|sk|rezať}}, {{t|sk|ťať}}
 * Slovene: {{t+|sl|rezati}}
 * Sorbian:
+*: Lower Sorbian: {{t|dsb|rězaś}}
 *: Upper Sorbian: {{t|hsb|rězać}}
 * Spanish: {{t+|es|cortar}}, {{t|es|incidir}}
 * Swedish: {{t+|sv|skära}}
@@ -535,6 +536,8 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * Romansch: {{t|rm|tagliar}}
 * Russian: {{t+|ru|разреза́ть|tr=razrezátʹ}} {{impf}}, {{t+|ru|разре́зать|tr=razrézatʹ}} {{pf.}}
 * Scottish Gaelic: {{t|gd|geàrr}}
+* Sorbian:
+*: Lower Sorbian: {{t|dsb|rězaś}}
 * Spanish: {{t+|es|cortar}}
 * Swedish: {{t+|sv|skära}} (''with knife''), {{t+|sv|klippa}} (''with scissors'')
 {{trans-bottom}}
