t+mi:[[Tiamani]] t+mi:[[Tiamana]] ([[WT:EDIT|Assisted]]) <Germany#23605282>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -113,6 +113,7 @@ From {{etyl|la|en}} {{term|Germania|lang=la}}; likely a [[w:Gaulish language|Gal
 * Malayalam: {{t|ml|ജര്മനി|tr=jarmani|sc=Mlym}}
 * Maltese: il-[[Ġermanja]] {{f}}
 * Manx: {{t|gv|Giarmaan|f}}
+* Maori: {{t|mi|Tiamani}}, {{t|mi|Tiamana}}
 * Marathi: {{t|mr|जर्मनी|tr=jarmanī|sc=Deva}}
 * Marshallese: {{t|mh|Jāmne}}
 * Mongolian: {{t|mn|Герман|tr=Germán|sc=Cyrl}}
