[[User:Msh210/format.js|semiautomated fixes]] <push#23622781>

--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -32,7 +32,7 @@
 #: ''My old car is '''pushing''' 250,000 miles.''
 #: ''He's pushing sixty.'' (= ''he's nearly sixty years old'')
 # {{context|intransitive|lang=en}} To tense the muscles in the [[abdomen]] in order to [[expel]] its contents.
-#: ''During childbirth, there are times when the [[obstetrician]] advises the woman not to '''push'''.''
+#: ''During childbirth, there are times when the obstetrician advises the woman not to '''push'''.''
 # {{context|intransitive|lang=en}} To continue to attempt to persuade a person into a particular course of action.
 # To make a higher [[bid]] at an [[auction]].
 # {{context|poker|lang=en}} To make an [[all-in]] [[bet]].
@@ -255,7 +255,7 @@
 Probably {{etyl|fr|en}} {{term|poche|lang=fr}}. See {{term|pouch|lang=en}}.
 
 ====Pronunciation====
-{{rfp}}
+{{rfp|lang=en}}
 
 ====Noun====
 {{en-noun|es}}
