--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -269,10 +269,13 @@ Probably {{etyl|fr|en}} {{term|poche|lang=fr}}. See {{term|pouch|lang=en}}.
 
 ==Albanian==
 
+===Etymology===
+From {{etyl|sqj-pro|sq}} {{recons|puša|lang=sqj-pro}}, from *puksja, from {{etyl|ine-pro|sq}} {{recons|puk|lang=ine-pro}}, {{recons|peuk|lang=ine-pro}}  'covered with hair, bushy'. Related to Sanskrit {{term|पुच्छ||tail|tr=púccha|lang=sa}}, Slavic* puxь 'down'<ref>A Concise Historical Grammar of the Albanian Language, V.Orel, Koninklijke Brill ,Leiden 2000, p.351</ref>.
+
 ===Noun===
 {{sq-noun|m|pusha|pushi|pushat}}
 
-# light [[hair]]
+# light [[hair]], [[fluff]], [[down]], [[nap]], [[pile]]
 
 [[Category:Albanian nouns]]
 
@@ -315,3 +318,8 @@ Probably {{etyl|fr|en}} {{term|poche|lang=fr}}. See {{term|pouch|lang=en}}.
 [[tr:push]]
 [[vi:push]]
 [[zh:push]]
+
+===References=== 
+<references/>
+
+[[sq:push]]
