t+az:[[port]] t+lo:[[ທ່າ]] t+sq:[[port]] t+af:[[hawe]] t-balance t+sk:[[prístav]] t+sl:[[luka]] t+sl:[[pristanišče]] t+tt:[[порт]] ([[WT:EDIT|Assisted]]) <port#23633001>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -41,9 +41,11 @@
 
 =====Translations=====
 {{trans-top|dock or harbour}}
+* Afrikaans: {{t|af|hawe}}
+* Albanian: {{t|sq|port|m}}
 * Arabic: {{t|ar|ميناء|m|tr=mīna’|sc=Arab}}
 * Armenian: {{t|hy|նավահանգիստ|tr=navahangist}}
-* Azeri: {{t|az|liman}}
+* Azeri: {{t|az|liman}}, {{t|az|port}}
 * Belarusian: {{t|be|порт|m|tr=port|sc=Cyrl}}
 * Bulgarian: {{t+|bg|порт|m|tr=port|sc=Cyrl}}
 * Chinese:
@@ -67,8 +69,9 @@
 * Italian: {{t+|it|porto|m}}
 * Japanese: {{t+|ja|港|tr=[[みなと]], minato|sc=Jpan}}
 * Kazakh: {{t|kk|кемежай|tr=kemejay|sc=Cyrl}}
-* Korean: {{t+|ko|항구|tr=hanggu|sc=Kore}} ({{t+|ko|港口|sc=Kore}})
 {{trans-mid}}
+* Korean: {{t+|ko|항구|tr=hanggu|sc=Kore}} ({{t+|ko|港口|sc=Kore}})
+* Lao: {{t|lo|ທ່າ|tr=thā|sc=Laoo}}
 * Latgalian: {{t|ltg|ūsta|f}}
 * Latvian: {{t+|lv|osta|f}}
 * Lithuanian: {{t|lt|uostas|m}}
@@ -85,10 +88,13 @@
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|лука|f}}
 *: Roman: {{t+|sh|luka|f}}
+* Slovak: {{t|sk|prístav|m}}
+* Slovene: {{t+|sl|luka|f}}, {{t+|sl|pristanišče|n}}
 * Spanish: {{t+|es|puerto|m}}
 * Swahili: {{t+|sw|bandari}}
 * Swedish: {{t+|sv|hamn|c}}
 * Tajik: {{t|tg|бандар|tr=bandar|sc=Cyrl}}
+* Tatar: {{t|tt|порт|sc=Cyrl}}
 * Telugu: [[ఓడరేవు]] (ODaraevu)
 * Thai: {{t|th|พอร์ต|tr=pôt|sc=Thai}}
 * Turkish: {{t+|tr|liman}}
