Fixing translation table to use {{t}} ([[User:Kephir/gadgets/xte|assisted]]) <port#23633014>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -67,13 +67,13 @@
 * Hindi: {{t|hi|बंदरगाह|m|tr=bandargāh|sc=Deva}}, {{t|hi|पोर्ट|tr=porṭ|sc=Deva}}
 * Hungarian: {{t+|hu|kikötő}}
 * Icelandic: {{t+|is|höfn|f}}
-* Ido: [[portuo]]
+* Ido: {{t|io|portuo}}
 * Indonesian: {{t+|id|pelabuhan}}
 * Irish: {{t|ga|port}}
 * Italian: {{t+|it|porto|m}}
 * Japanese: {{t+|ja|港|tr=[[みなと]], minato|sc=Jpan}}
 * Kazakh: {{t|kk|кемежай|tr=kemejay|sc=Cyrl}}, {{t+|kk|порт|sc=Cyrl}}
-* {{trreq|Khmer}}
+* {{trreq|km}}
 * Korean: {{t+|ko|항구|tr=hanggu|sc=Kore}} ({{t+|ko|港口|sc=Kore}})
 * Kyrgyz: {{t|ky|порт|sc=Cyrl}}
 {{trans-mid}}
@@ -83,7 +83,7 @@
 * Lithuanian: {{t|lt|uostas|m}}
 * Macedonian: {{t|mk|пристаниште|n|tr=pristánište|sc=Cyrl}}
 * Malay: {{t|ms|pelabuhan}}
-* Malayalam: [[തുറമുഖം]] (thuRamukham)
+* Malayalam: {{t|ml|തുറമുഖം|tr=thuRamukham|sc=Mlym}}
 * Neapolitan: {{t|nap|puorto}}
 * Norwegian:
 *: Bokmål: {{t+|nb|port}}, {{t+|nb|havn|m|f}}
@@ -104,7 +104,7 @@
 * Tagalog: {{t|tl|port}}, {{t|tl|daungan}}
 * Tajik: {{t|tg|бандар|tr=bandar|sc=Cyrl}}, {{t|tg|бандаргоҳ|sc=Cyrl}}
 * Tatar: {{t|tt|порт|sc=Cyrl}}
-* Telugu: [[ఓడరేవు]] (ODaraevu)
+* Telugu: {{t|te|ఓడరేవు|tr=ōḍarēvu|sc=Telu}}
 * Thai: {{t|th|พอร์ต|tr=pôt|sc=Thai}}
 * Turkish: {{t+|tr|liman}}
 * Turkmen: {{t|tk|port}}
@@ -120,36 +120,38 @@
 *: Mandarin: {{t+|cmn|港市|tr=gǎngshì|sc=Hani}}
 * Czech: {{t+|cs|přístav|m}}, {{t|cs|přístavní město|n}}
 * Dutch: {{t+|nl|havenstad|f}}
-* Finnish: [[satamakaupunki]], [[satama]]
+* Finnish: {{t|fi|satamakaupunki}}, {{t|fi|satama}}
 * French: {{t+|fr|port|m}}
 * Galician: {{t+|gl|porto|m}}
 * German: {{t+|de|Hafenstadt|f}}
 * Greek: {{t+|el|λιμάνι|n|tr=limáni}}
 * Hungarian: {{t+|hu|kikötőváros}}
 * Icelandic: {{t|is|hafnarborg|f}}
-* Ido: [[portuo]]
-* Italian: [[città portuale]] {{g|f}}
+* Ido: {{t|io|portuo}}
+* Italian: {{t|it|città portuale|f}}
 {{trans-mid}}
 * Latvian: {{t|lv|ostas pilsēta|f}}
 * Lithuanian: {{t|lt|uostamiestis|m}}
-* Polish: [[miasto portowe]] {{g|n}}
+* Polish: {{t|pl|miasto portowe|n}}
 * Romanian: {{t|ro|port|n}}
 * Russian: {{t+|ru|порт|m|tr=port|sc=Cyrl}}, {{t|ru|портовый город|m|tr=portóvyj górod|sc=Cyrl}}
 * Scottish Gaelic: {{t|gd|port|m}}
-* Serbo-Croatian: {{t+|sh|luka|f}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|лука|f}}
+*: Roman: {{t+|sh|luka|f}}
 * Spanish: {{t+|es|puerto|m}}
 * Swahili: {{t+|sw|bandari}}
 * Swedish: {{t+|sv|hamnstad|c}}
-* Turkish: {{l|tr|liman}} {{t|tr|kenti}}/{{t|tr|şehri}}
+* Turkish: {{l|tr|liman}} {{t|tr|kenti}}, {{t|tr|şehri}}
 {{trans-bottom}}
 
 {{trans-see|left-hand side of a vessel|larboard}}
 
 {{checktrans-top}}
-* {{ttbc|haw}}: [[awa]]
-* {{ttbc|la}}: [[portus]] {{g|m}} (1)
+* {{ttbc|haw}}: {{t|haw|awa}}
+* {{ttbc|la}}: {{qualifier|1}} {{t|la|portus|m}}
 {{trans-mid}}
-* {{ttbc|mi}}: [[taunga tima]], [[herenga]], [[aka]], [[poi]], [[ama]], [[mauī]], [[pōta]]
+* {{ttbc|mi}}: {{t|mi|taunga tima}}, {{t|mi|herenga}}, {{t|mi|aka}}, {{t|mi|poi}}, {{t|mi|ama}}, {{t|mi|mauī}}, {{t|mi|pōta}}
 {{trans-bottom}}
 
 ====Adjective====
