t+km:[[កំពង់ផែ]] t+km:[[កំពង់]] ([[WT:EDIT|Assisted]]) <port#23633110>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -74,7 +74,7 @@
 * Japanese: {{t+|ja|港|tr=[[みなと]], minato|sc=Jpan}}
 * Kannada: {{t+|kn|ರೇವು|tr=rēvu|sc=Knda}}
 * Kazakh: {{t|kk|кемежай|tr=kemejay|sc=Cyrl}}, {{t+|kk|порт|sc=Cyrl}}
-* {{trreq|km}}
+* Khmer: {{t|km|កំពង់ផែ|tr=kɑmpʊəŋ pʰae|sc=Khmr}}, {{t+|km|កំពង់|tr=kɑmpʊəŋ|sc=Khmr}}
 * Korean: {{t+|ko|항구|tr=hanggu|sc=Kore}} ({{t+|ko|港口|sc=Kore}})
 * Kyrgyz: {{t|ky|порт|sc=Cyrl}}
 * Lao: {{t|lo|ທ່າ|tr=thā|sc=Laoo}}
