t+uk:[[гавань]] t+be:[[гавань]] t+bg:[[пристанище]] ([[WT:EDIT|Assisted]]) <port#23642236>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -46,9 +46,9 @@
 * Arabic: {{t|ar|ميناء|m|tr=mīna’|sc=Arab}}
 * Armenian: {{t|hy|նավահանգիստ|tr=navahangist}}
 * Azeri: {{t|az|liman}}, {{t|az|port}}
-* Belarusian: {{t|be|порт|m|tr=port|sc=Cyrl}}
+* Belarusian: {{t|be|порт|m|tr=port|sc=Cyrl}}, {{t|be|га́вань|f|sc=Cyrl}}
 * Bengali: {{t|bn|পোর্ট|tr=porţ|sc=Beng}}
-* Bulgarian: {{t+|bg|порт|m|tr=port|sc=Cyrl}}
+* Bulgarian: {{t+|bg|порт|m|tr=port|sc=Cyrl}}, {{t+|bg|приста́нище|n|sc=Cyrl}}
 * Burmese: {{t+|my|သင်္ဘောဆိပ်|tr=thin: bo: zeí|sc=Mymr}}
 * Chinese:
 *: Mandarin: {{t+|cmn|港|tr=gǎng|sc=Hani}}, {{t+|cmn|港口|tr=gǎngkǒu|sc=Hani}}, {{t+|cmn|口岸|tr=kǒu'àn|sc=Hani}}, {{t+|cmn|港埠|tr=gǎngbù|sc=Hani}}
@@ -112,7 +112,7 @@
 * Thai: {{t|th|พอร์ต|tr=pôt|sc=Thai}}
 * Turkish: {{t+|tr|liman}}
 * Turkmen: {{t|tk|port}}
-* Ukrainian: {{t|uk|порт|m|tr=port|sc=Cyrl}}
+* Ukrainian: {{t|uk|порт|m|tr=port|sc=Cyrl}}, {{t|uk|га́вань|f|sc=Cyrl}}
 * Urdu: {{t|ur|بندرگاہ|m|tr=bandargāh|sc=ur-Arab}}, {{t|ur|پورٹ|tr=porṭ|sc=ur-Arab}}
 * Uzbek: {{t|uz|port}}, {{t|uz|bandargoh}}
 * Vietnamese: {{t+|vi|cảng}} ({{t|vi|港}})
