/* Translations */ check el <feel#23647144>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -100,6 +100,7 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 * French: {{t+|fr|palper}}, {{t+|fr|toucher}}
 * Friulian: {{t|fur|sintî}}
 * German: {{t+|de|fühlen}}, {{t+|de|spüren}}
+* Greek: {{t+|el|αισθάνομαι}}
 * Haitian Creole: {{t|ht|santi}}
 * Hungarian: {{t+|hu|érez}}, {{t+|hu|tapint}}
 * Ido: {{t+|io|sentar}}
@@ -148,7 +149,7 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 * Friulian: {{t|fur|sintî}}
 * Georgian: {{t|ka|გრძნობა|sc=Geor}}
 * German: {{t+|de|fühlen}}, {{t+|de|spüren}}
-* Greek: {{t+|el|αισθάνομαι|tr=aisthánomai|sc=Grek}}
+* Greek: {{t+|el|αισθάνομαι|sc=Grek}}
 * Hebrew: {{t|he|הרגיש|tr=Hirgish}}
 * Hindi: {{t|hi|महसूस करना|tr=mahsūs karnā|sc=Deva}}
 * Hungarian: {{t+|hu|érez}}
@@ -239,6 +240,7 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 * Finnish: {{t+|fi|tuntea}}
 * French: {{t+|fr|se sentir}}
 * German: {{t|de|sich fühlen}}
+* Greek: {{t+|el|νιώθω}}
 * Hungarian: {{t+|hu|érez}}
 * Ngazidja Comorian: {{t|zdj|udjihisi}}
 {{trans-mid}}
@@ -275,7 +277,6 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 * {{ttbc|eo}}: {{t|eo|senti}}
 * {{ttbc|fr}}: {{t+|fr|ressentir}}
 * {{ttbc|de}}: {{t+|de|fühlen}}
-* {{ttbc|el}}: {{t+|el|νιώθω}}, {{t+|el|αισθάνομαι}}
 * {{ttbc|is}}: {{t+|is|finna}}
 * {{ttbc|id}}: {{t+|id|merasa}}, {{t+|id|merasakan}}, {{t+|id|menganggap}}, {{t|id|beranggap}}, {{t+|id|beranggapan}} (touch)
 * {{ttbc|it}}: {{t+|it|sentire}}, {{t+|it|sentirsi}}
