t+kca:[[хурамӑӈ]] ([[WT:EDIT|Assisted]]) <beautiful#23648409>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -98,6 +98,8 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Italian: {{t+|it|bello}}
 * Japanese: {{t+|ja|美しい|tr=うつくしい, utsukushii}}, {{t|ja|綺麗|tr=きれい, kirei}}, {{t+|ja|素敵|tr=すてき, suteki}}
 * Jèrriais: {{t|roa-jer|bieau|m}}, {{t|roa-jer|belle|f}}
+* Khanty:
+*: Kazym: {{t|kca|хурамӑӈ|tr=huramăň}}
 * Khmer: {{t+|km|ស្អាត|tr=saāt}}, {{t+|km|ល្អ|tr=l'ɑɑ|sc=Khmr}}
 * Korean: {{qualifier|attributive}} {{t+|ko|아름다운|tr=areumdaun|sc=Kore}}, {{qualifier|predicative}} {{t+|ko|아름답다|tr=areumdapda|sc=Kore}}
 * Kurdish:
