--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -196,7 +196,7 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * Middle English: {{t|enm|counten}}
 * Mongolian: {{t|mn|тоолох|tr=tooloh|sc=Cyrl}}
 * Navajo: {{t|nv|ółtaʼ}}
-* North Frisian: {{t|frr|räägne}}
+* North Frisian: {{qualifier|Mooring dialect}} {{t|frr|räägne}}
 * Norwegian:
 *: Bokmål: {{t+|nb|telle}}
 *: Nynorsk: {{t+|nn|telja}}
