/* Translations */ * Ngazidja Comorian: {{tø|zdj|tsungua|alt=utsungua}} <choose#23679059>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -85,6 +85,7 @@ From {{etyl|enm|en}} {{term|chosen|lang=enm}}, {{term|chesen|lang=enm}}, from {{
 * Maltese: {{t|mt|għażel}}
 * Maori: {{t|mi|whiri}}
 * Mongolian: {{t|mn|сонгох|tr=songoh|sc=Cyrl}}
+* Ngazidja Comorian: {{tø|zdj|tsungua|alt=utsungua}}
 * Norwegian:
 *: Bokmål: {{t+|nb|velge}}
 * Old English: {{t|ang|ceosan}}
