/* Translingual */ added "ids=" ⿰土上 (composition) data to /Han char/ template <圵#23715360>

--- a/en/圵/圵.12983.wikitext
+++ b/en/圵/圵.12983.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=03|sn=6|four=|canj=土卜一 (GYM)}}
+{{Han char|rn=32|rad=土|as=03|sn=6|four=|canj=土卜一 (GYM)|ids=⿰[[土]][[上]]}}
 
 # {{defn|Han|sort=土03}}
 
