/* Min Nan */ added superscript HTML tags to alternate POJ readings <地#23722965>

--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -237,7 +237,7 @@
 ==Min Nan==
 
 ===Hanzi===
-{{nan-hanzi|poj=[[tè]] (te3), [[tuē]] (tue7), [[tī]] (ti7)}}
+{{nan-hanzi|poj=[[tè]] (te<sup>3</sup>), [[tuē]] (tue<sup>7</sup>), [[tī]] (ti<sup>7</sup>)}}
 
 # {{defn|lang=nan|sort=土03}}
 
