/* Translingual */ moved "prairie" text into its own definition entry; wikilinked three words/terms in definition entries; added "ids=" ⿰土广 (composition) data to /Han char/ template <圹#23723243>

--- a/en/圹/圹.12987.wikitext
+++ b/en/圹/圹.12987.wikitext
@@ -2,10 +2,11 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=03|sn=6|four=|canj=土戈 (GI), X土戈 (XGI)}}
+{{Han char|rn=32|rad=土|as=03|sn=6|four=|canj=土戈 (GI), X土戈 (XGI)|ids=⿰[[土]][[广]]}}
 
-# [[tomb]], [[grave]]: prairie
-# open wilderness
+# [[tomb]], [[grave]]
+# [[prairie]]
+# [[open]] [[wilderness]]
 
 ====References====
 * {{Han ref|kx=0224.181|hdz=10420.070|uh=5739|ud=22329}}
