/* Translingual */ added "ids=" ⿰土勿 (composition) data to /Han char/ template <圽#23724831>

--- a/en/圽/圽.12992.wikitext
+++ b/en/圽/圽.12992.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土心竹竹 (GPHH)}}
+{{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土心竹竹 (GPHH)|ids=⿰[[土]][[勿]]}}
 
 # {{defn|Han|sort=土04}}
 
