/* Translingual */ added "ids=" ⿰土氏 (composition) data to /Han char/ template <坁#23741273>

--- a/en/坁/坁.12996.wikitext
+++ b/en/坁/坁.12996.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=04|sn=7|four=4214<sub>0</sub>|canj=土竹女心 (GHVP)}}
+{{Han char|rn=32|rad=土|as=04|sn=7|four=4214<sub>0</sub>|canj=土竹女心 (GHVP)|ids=⿰[[土]][[氏]]}}
 
 # {{defn|Han|sort=土04}}
 
