edit section 1.3.1 ([[WT:EDIT|Assisted]]) <secretary#23768353>

--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -23,7 +23,7 @@ From {{etyl|ML.|en}} {{term|lang=la|secretarius||one entrusted with secrets}}, f
 
 ====Derived terms====
 * [[secretary bird]]
-
+* [[secretary desk]]
 ====Related terms====
 * [[secret]]
 * [[secretion]]
