/* Mandarin */ see also <坊#23774920>

--- a/en/坊/坊.13005.wikitext
+++ b/en/坊/坊.13005.wikitext
@@ -45,7 +45,11 @@
 
 ===Hanzi===
 {{cmn-hanzi|pin=[[fāng]] ([[fang1]])|wg=fang<sup>1</sup>}}
+
 # {{defn|lang=cmn|sort=土04}}
+
+====See also====
+* {{l|cmn|广场|tr=广场}}
 
 ----
 
