/* Cantonese */ added "jyut=" (jyutping) (ban3, ban6) and "y=" (Yale) data (ban6) to /yue-hanzi/ template <坌#23776147>

--- a/en/坌/坌.13007.wikitext
+++ b/en/坌/坌.13007.wikitext
@@ -16,7 +16,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=ban3}}
+{{yue-hanzi|jyut=[[ban3]], [[ban6]]|y=ban3, ban6}}
 
 # {{defn|lang=yue|sort=土04}}
 
