/* Translingual */ added "ids=" ⿱比土 (composition) data to /Han char/ template <坒#23777250>

--- a/en/坒/坒.13013.wikitext
+++ b/en/坒/坒.13013.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=04|sn=7|four=2110<sub>4</sub>|canj=心心土 (PPG)}}
+{{Han char|rn=32|rad=土|as=04|sn=7|four=2110<sub>4</sub>|canj=心心土 (PPG)|ids=⿱[[比]][[土]]}}
 
 # to [[compare]]
 # to [[match]]
