/* Translingual */ added "a hole, pit" definition entry and wikilinked two words/terms <坜#23786832>

--- a/en/坜/坜.13023.wikitext
+++ b/en/坜/坜.13023.wikitext
@@ -4,7 +4,7 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土一大尸 (GMKS)|ids=⿰[[土]][[历]]}}
 
-# {{defn|Han|sort=土04}}
+# a [[hole]], [[pit]]
 
 ====References====
 * {{Han ref|kx=0226.101|hdz=10422.030|uh=575C|ud=22364}}
